--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Git Test</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti itaque, illo veniam repellendus fugiat, rerum sapiente omnis assumenda, repudiandae vel voluptas? Quam nihil quo quisquam? Ipsam ullam enim autem sint?</p>
     <script src="JS/app.js"></script>
 </body>
 </html>
